# sogl

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
cmake/: Helpers.cmake  Macros.cmake  Policies.cmake
examples/: 01_triangle.cpp  02_events.cpp  03_cube.cpp  04_camera.cpp  05_post_processing.cpp  CMakeLists.txt  triangle.cpp
include/sogl/: Event.hpp  Font.hpp  FrameBuffer.hpp  GlObject.hpp  Inputs.hpp  Keys.hpp  PostProcess.hpp  Shader.hpp  Shader.tpp  Texture.hpp  Vertex.hpp  VertexArray.hpp  VertexArray.tpp  Window.hpp  sogl.hpp
src/: Event.cpp  Font.cpp  FrameBuffer.cpp  Inputs.cpp  PostProcess.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  Window.cpp
