macro(add_example name source)
    add_executable(${name} ${source})
    target_link_libraries(${name} PRIVATE sogl)
    set_target_properties(${name} PROPERTIES DEBUG_POSTFIX -d)
    set_target_properties(${name} PROPERTIES CXX_STANDARD 20)
    if (${CMAKE_SYSTEM_NAME} STREQUAL "Emscripten")
        set_target_properties(${name} PROPERTIES SUFFIX ".html")
        set_target_properties(${name} PROPERTIES LINK_FLAGS "-s USE_GLFW=3 -s USE_WEBGL2=1 -s FULL_ES3=1")
    endif()
endmacro()

add_example(01-triangle 01_triangle.cpp)
add_example(02-events   02_events.cpp)
add_example(03-cube     03_cube.cpp)
add_example(04-camera   04_camera.cpp)
